1.增加站点图标

--- a/source/404.html
+++ b/source/404.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>404</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+		<link href="./favicon.png" rel="icon">
+		<title>弦外之影 - 404</title>
 	</head>
 	<body>
 		<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="https://babysource.github.io" homePageName="回到主页"></script>
